--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,19 +5,22 @@
 
 a {
  color:#6a0dad;
- text-decoration:none
 }
 a:hover,
 a:focus {
  color:#6a0dad;
- font-weight:bold
 }
 a small {
- font-size:11px;
  color:#6a0dad;
- margin-top:-0.3em;
- display:block
 }
 a:hover small {
  color:#6a0dad
+}
+
+body {
+ font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, {
+ letter-spacing: -0.1em;
 }
