--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,8 +19,10 @@ a:hover small {
 
 body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+ font-size: 105%;
 }
 
-h1, h2, h3, {
- letter-spacing: -0.1em;
+h1, h2, h3, h4, h5, h6 {
+ letter-spacing: -0.08em;
+ font-size: 110%;
 }
