Made the page annoying with cyan

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,14 @@
 
 @import "{{ site.theme }}";
 
+/* Everything above this is the bare minimum */
+
+/* Everything below this is my own customizations */
+
 a {
  color:#6a0dad;
 }
+
 a:hover,
 a:focus {
  color:#6a0dad;
@@ -17,15 +22,19 @@ a:hover small {
  color:#6a0dad
 }
 
+/* body means everything, the default for the page */
 body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 105%;
 }
 
+/* these are the headers */
 h1, h2, h3, h4, h5, h6 {
  letter-spacing: -0.08em;
 }
 
+
 header h1 a {
  font-size: 1.2em;
+ color: #34ebd8;
 }
